# crossfamily-dpo

./: .gitignore  NOTES.md  README.md  pyproject.toml
cards/: ministral-8b.md  qwen3-4b.md
data/: smoke_prefs.jsonl
src/: rescore.py  smoke.py  smoke_real.py  train_dpo.py
